# ai-value-investing

./: .gitignore  README.md  pyproject.toml
src/ai_value_investing/: app.py  crew.py  main.py
src/ai_value_investing/config/: agents.yaml  tasks.yaml
src/ai_value_investing/tools/: pe_tool.py
