[project]
name = "ai_value_investing"
version = "0.1.0"
description = "ai-value-investing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "baostock>=0.8.9",
    "crewai[tools]>=0.150.0,<1.0.0",
]

[project.scripts]
ai_value_investing = "ai_value_investing.main:run"
run_crew = "ai_value_investing.main:run"
train = "ai_value_investing.main:train"
replay = "ai_value_investing.main:replay"
test = "ai_value_investing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
